# Lumora

./: breathing_exercises.py  camera_analysis.py  daily_challenges.py  meditation_module.py  quick_remedies.py  replit.md  therapy_bot.py
.devcontainer/: devcontainer.json
BreathWell/: app.py  data_manager.py  emotion_tracker.py  pyproject.toml  requirements  translations.py
